--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "with-next-endpoint",
   "author": "C. Lewis <ctj.lewis@icloud.com>",
   "type": "module",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "engines": {
     "node": ">=14"
@@ -37,14 +37,14 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@tszip/tszip": "^1.15.2",
-    "husky": "^7.0.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.2",
-    "yarn-deduplicate": "^3.1.0"
+    "@tszip/tszip": "latest",
+    "husky": "latest",
+    "tslib": "latest",
+    "typescript": "latest",
+    "yarn-deduplicate": "latest"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.6.1",
-    "next": "^12.0.4"
+    "@auth0/nextjs-auth0": "latest",
+    "next": "latest"
   }
 }
