--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "with-next-endpoint",
   "author": "C. Lewis <ctj.lewis@icloud.com>",
   "type": "module",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "license": "MIT",
   "engines": {
     "node": ">=14"
@@ -37,14 +37,14 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@tszip/tszip": "latest",
+    "@tszip/tszip": "1.16.1",
     "husky": "latest",
     "tslib": "latest",
-    "typescript": "latest",
+    "typescript": "4.5.4",
     "yarn-deduplicate": "latest"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "latest",
-    "next": "latest"
+    "@auth0/nextjs-auth0": "1.6.2",
+    "next": "12.0.7"
   }
 }
