--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   },
   "devDependencies": {
     "@tsmodule/tsmodule": "^40.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "ava": "^4.3.0",
+    "eslint": "^8.17.0",
     "husky": "8.0.1",
     "next": "12.0.7",
     "ts-jest": "^28.0.4",
