--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "tsmodule build -b",
+    "build": "tsmodule build",
     "dev": "tsmodule dev",
     "test": "ava",
     "prepublishOnly": "yarn build && yarn test"
@@ -47,7 +47,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "http": "^0.0.1-security",
-    "node-google-analytics": "^1.1.5",
+    "node-google-analytics": "^1.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
